some locations and dates

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="row">
 						<div class="text-center col-sm-12">
 							<h1>Natalie &amp; Gunnar</h1>
-							<h6>August 6th - Flinders Ranges, Victoria</h6>
+							<h6>August 19th &amp; 21st - Minneapolis & Eveleth, Minnesota</h6>
 						</div>
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-							<h2>Join Natalie &amp; Gunnar on the 6th of August to celebrate their union.</h2>
+							<h2>Join Natalie &amp; Gunnar to celebrate their union.</h2>
 							<h6>A little about the bride and groom.</h6>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<h1>SAVE THE DATE</h1>
-							<h4>Saturday August 6th - Bucks &amp; Hens details to follow.</h4>
+							<h4>August 19th &amp; 21st - details to follow.</h4>
 						</div>
 					</div>
 				</div>
@@ -316,7 +316,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<h6>© Copyright 2015 Medium Rare - All Rights Reserved</h6>
+							<h6>© Copyright 2022 - All Rights Reserved</h6>
 						</div>
 					</div>
 				</div>
