--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 						<div class="col-md-4 col-md-offset-2 col-sm-6 feature">
 							<img alt="Photo" src="img/tall1.jpg">
 							<p>
-								You have been my best friend, mentor, playmate, confidant, and my greatest challenge. But most importantly, you are the love of my life and you make me happier than I could ever imagine and more loved than I ever thought possible.
+								Hello Wife!
 							</p>
 						</div>
 
 						<div class="col-md-4 col-sm-6 feature">
 							<img alt="Photo" src="img/tall2.jpg">
 							<p>
-								I love you for your beauty, your intelligence, your kindness… and for the way you always know how to make me feel so special. So on top of all the other vows that I will make to you on our wedding day, I also vow to always appreciate how lucky I am.
+								Very Nice!
 							</p>
 						</div>
 					</div>
