party and ceremony details

--- a/index.html
+++ b/index.html
@@ -104,29 +104,29 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
 							<p>
-								I guess you could call this a typical "boy meets girl in bar" story but with a twist!  Boy buys girl a drink, girl gives boy phone number. Two months and several thousand kilometers later and said boy and girl are head over heels for each other. Fast forward to today and we're settling down in our first home ready to tie the knot.
+								Friends are invited to party with us in Minneapolis on August 19th. Family are invited to the ceremony on August 21st at Ely Lake near Eveleth, MN.
 							</p>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-4 col-md-offset-2 col-sm-6 text-center feature">
-							<h5>Ceremony</h5>
+							<h5>Party in Minneapolis</h5>
 							<p>
-								<strong>Montrose Vineyard</strong><br>
-								2:30pm - 3:30pm<br>
-								65 Chilvers Avenue<br>
-								Flinders Ranges, Vic
+								<strong>Each Other</strong><br>
+								6:00pm - Late<br>
+								2416 N 2nd St<br>
+								Minneapolis, MN 55411
 							</p>
 						</div>
 
 						<div class="col-md-4 col-sm-6 text-center feature">
-							<h5>Reception</h5>
+							<h5>Ceremony at Ely Lake</h5>
 							<p>
-								<strong>Flinders Country Club</strong><br>
-								4:30pm - Late<br>
-								1021 Greenvale Road<br>
-								Flinders Ranges, Vic
+								<strong>Prittinen Family Compound</strong><br>
+								12:30pm - Late<br>
+								Ely Lake<br>
+								Minnesota 55734
 							</p>
 						</div>
 					</div>
