--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 						<div class="col-sm-12 text-center">
 							<h1>Say you'll be there</h1>
 							<p>
-								Please let us know if you can make it by<br> July 10th at the latest, preesh!
+								<!-- Please let us know if you can make it by<br> July 10th at the latest, preesh! -->
 							</p>
 						</div>
 					</div>
@@ -262,7 +262,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="form-section">
+								<!--	<div class="form-section">
 										<h6>Meal Preference</h6>
 										<div class="radio-group">
 											<div class="radio-holder naked checked">
@@ -281,7 +281,7 @@
 									</div>
 									<div class="form-section">
 										<input type="text" name="song" placeholder="Any Song Requests?">
-									</div>
+									</div> -->
 									<input type="submit" value="RSVP">
 									<div class="form-error">
 										<span>Please fill out all fields</span>
