--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<h1>SAVE THE DATE</h1>
-							<h4>August 19th &amp; 21st - details to follow.</h4>
+							<h4>August 19th &amp; 21st</h4>
 						</div>
 					</div>
 				</div>
