--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 						<div class="col-sm-12 text-center">
 							<a href="#">
 								<h1>#Natalie+Gunnar</h1>
-								<h6>Share the day on Instagram</h6>
+								<!-- <h6>Share the day on Instagram</h6> -->
 							</a>
 						</div>
 					</div>
