images and google forms

--- a/index.html
+++ b/index.html
@@ -59,24 +59,17 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-							<h2>Join Natalie &amp; Gunnar to celebrate their union.</h2>
-							<h6>A little about the bride and groom.</h6>
+							<h2>Join us to celebrate our wedding.</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-4 col-md-offset-2 col-sm-6 feature">
 							<img alt="Photo" src="img/tall1.jpg">
-							<p>
-								Hello Wife!
-							</p>
 						</div>
 
 						<div class="col-md-4 col-sm-6 feature">
 							<img alt="Photo" src="img/tall2.jpg">
-							<p>
-								Very Nice!
-							</p>
 						</div>
 					</div>
 				</div>
@@ -111,19 +104,24 @@
 
 					<div class="row">
 						<div class="col-md-4 col-md-offset-2 col-sm-6 text-center feature">
-							<h5>Party in Minneapolis</h5>
+							<h5>Reception in Minneapolis</h5>
 							<p>
 								<strong>Each Other</strong><br>
+                August 19th<br>
 								6:00pm - Late<br>
 								2416 N 2nd St<br>
 								Minneapolis, MN 55411
 							</p>
+
+
+
 						</div>
 
 						<div class="col-md-4 col-sm-6 text-center feature">
 							<h5>Ceremony at Ely Lake</h5>
 							<p>
 								<strong>Prittinen Family Compound</strong><br>
+                August 21st<br>
 								12:30pm - Late<br>
 								Ely Lake<br>
 								Minnesota 55734
@@ -132,6 +130,8 @@
 					</div>
 				</div>
 			</section>
+
+<!--
 
 			<a id="accomm" class="in-page-link"></a>
 
@@ -187,6 +187,8 @@
 				</div>
 			</section>
 
+    -->
+
 			<a id="registry" class="in-page-link"></a>
 
 			<section class="registry registry-1 registry-3 overlay-light parallax">
@@ -240,11 +242,28 @@
 						<div class="col-sm-12 text-center">
 							<h1>Say you'll be there</h1>
 							<p>
-								<!-- Please let us know if you can make it by<br> July 10th at the latest, preesh! -->
+							       Please use either the Reception or Ceremony forms below
 							</p>
 						</div>
 					</div>
 
+          <div>
+
+							<h5>Reception in Minneapolis (Friends)</h5>
+
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfNowJv-KJMCdwuCF8phX7n_MGScj1DQ7xizZz7Q3Oc1Z-Vtw/viewform?embedded=true" width="640" height="1223" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+						</div>
+
+            <div>
+							<h5>Ceremony at Ely Lake (Family)</h5>
+
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfJ3wTqC1o8VwRE3omY7u1QRoXgTjeDXXjo7KZvWHgeUUM-KQ/viewform?embedded=true" width="640" height="1068" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						</div>
+					</div>
+
+
+          <!--
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<div class="form-wrapper">
@@ -261,7 +280,7 @@
 												<input type="radio" name="rsvp" value="not-attending">
 											</div>
 										</div>
-									</div>
+									</div> -->
 								<!--	<div class="form-section">
 										<h6>Meal Preference</h6>
 										<div class="radio-group">
@@ -282,7 +301,7 @@
 									<div class="form-section">
 										<input type="text" name="song" placeholder="Any Song Requests?">
 									</div> -->
-									<input type="submit" value="RSVP">
+								<!--	<input type="submit" value="RSVP">
 									<div class="form-error">
 										<span>Please fill out all fields</span>
 									</div>
@@ -294,6 +313,8 @@
 						</div>
 					</div>
 				</div>
+        -->
+
 			</section>
 
 			<section class="gallery gallery-2 overlay">
