up until registry

--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
 							<p>
-								Friends are invited to party with us in Minneapolis on August 19th. Family are invited to the ceremony on August 21st at Ely Lake near Eveleth, MN.
+								Friends are invited for a pre-wedding celebration of dinner, drinks and dancing on August 19th. Family are invited to the ceremony and reception on August 21st.
 							</p>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-4 col-md-offset-2 col-sm-6 text-center feature">
-							<h5>Reception in Minneapolis</h5>
+							<h5>CELEBRATION IN MINNEAPOLIS</h5>
 							<p>
-								<strong>Each Other</strong><br>
-                August 19th<br>
-								6:00pm - Late<br>
-								2416 N 2nd St<br>
-								Minneapolis, MN 55411
+								<strong>Steady Pour</strong><br>
+                August 19th, 2022<br>
+								6PM-11PM<br>
+								2125 E Hennepin Ave #205,<br>
+								Minneapolis, MN 55413
 							</p>
 
 
@@ -118,20 +118,20 @@
 						</div>
 
 						<div class="col-md-4 col-sm-6 text-center feature">
-							<h5>Ceremony at Ely Lake</h5>
+							<h5>CEREMONY & RECEPTION ON ELY LAKE</h5>
 							<p>
 								<strong>Prittinen Family Compound</strong><br>
-                August 21st<br>
-								12:30pm - Late<br>
-								Ely Lake<br>
-								Minnesota 55734
+                August 21st, 2022<br>
+								1PM ceremony<br>
+								4527 Woodlawn Point<br>
+								Eveleth, MN 55734
 							</p>
 						</div>
 					</div>
 				</div>
 			</section>
 
-<!--
+
 
 			<a id="accomm" class="in-page-link"></a>
 
@@ -148,13 +148,12 @@
 							<a href="#">
 								<img alt="Hotel" src="img/small5.jpg">
 							</a>
-							<h6>Sheraton Flinders</h6>
+							<h6></h6>
 							<p>
-								Mention our names when making your reservation to recieve the group booking discount.
+
 							</p>
 							<p>
-								767 Greenvale Road<br>
-								Flinders Vic 3214
+
 							</p>
 						</div>
 
@@ -162,12 +161,13 @@
 							<a href="#">
 								<img alt="Hotel" src="img/small6.jpg">
 							</a>
-							<h6>Camp Crusty, Flinders</h6>
+							<h6>Eveleth</h6>
 							<p>
-								Limited cabins are available at Camp Krusty for groups with up to 8 guests.
+								For those traveling to Eveleth, the nearest hotel is the
+                <a href="https://www.wyndhamhotels.com/super-8/eveleth-minnesota/super-8-eveleth/overview?iata=00093763&cid=PS:4gp2262opo0j8i9&gclid=CjwKCAjw46CVBhB1EiwAgy6M4hZ663rYCh-4CRk-6qVAx29Lo7dHtlVeduBwkbBitOOn8Z0O8gywPBoCy80QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">Super 8 by Wyndham.</a>
 							</p>
 							<p>
-								122 Chilvers Avenue<br> Flinders, VIC 3214
+								1080 Industrial Park Drive, Eveleth, MN <br>
 							</p>
 						</div>
 
@@ -175,19 +175,17 @@
 							<a href="#">
 								<img alt="Hotel" src="img/small7.jpg">
 							</a>
-							<h6>Flinders Country Club</h6>
+							<h6></h6>
 							<p>
-								A great option for the budget-concious with rooms for up to 4 guests.
+
 							</p>
 							<p>
-								65 Chilvers Avenue<br> Flinders, VIC 3214
+
 							</p>
 						</div>
 					</div>
 				</div>
 			</section>
-
-    -->
 
 			<a id="registry" class="in-page-link"></a>
 
@@ -200,20 +198,20 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<h2>Give the gift of presents</h2>
+							<h2>Registry</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-4 col-md-offset-2 col-sm-6 text-center">
 							<a href="#">
-								<img alt="Registry" src="img/r1.png">
+
 							</a>
 						</div>
 
 						<div class="col-md-4 col-sm-6 text-center">
 							<a href="#">
-								<img alt="Registry" src="img/r2.png">
+
 							</a>
 						</div>
 					</div>
@@ -221,13 +219,13 @@
 					<div class="row">
 						<div class="col-md-4 col-md-offset-2 col-sm-6 text-center">
 							<a href="#">
-								<img alt="Registry" src="img/r4.png">
+
 							</a>
 						</div>
 
 						<div class="col-md-4 col-sm-6 text-center">
 							<a href="#">
-								<img alt="Registry" src="img/r3.png">
+
 							</a>
 						</div>
 					</div>
