--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
 					<div class="row">
 						<div class="col-sm-12 text-center">
 							<h2>Registry</h2>
+              <p >We are thrilled to be able to celebrate this occasion, and your presence is a gift in itself. Gifts are not an expectation, but if you would like to provide something we encourage contributions to either of the following organizations:</p>
+              <p>The Alameda County Food Bank  - <a href="https://www.accfb.org" target="_blank" rel="noopener noreferrer">https://www.accfb.org</a></p>
+              <p> Greyhound Pets of America, Minnesota Chapter - <a href="https://gpa-mn.org" target="_blank" rel="noopener noreferrer">https://gpa-mn.org</a></p>
+
+<p>We have everything we need, but are always trying to find room in our lives and storage unit for additional bicycles. Small dollar donations to the Prittinen/Halseth Bike Fund (Venmo @nprittinen) are welcome. 100% of funds will be put towards our goal of having 3x as many bikes as humans in our household.</p>
 						</div>
 					</div>
 
@@ -238,7 +243,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-						
+
 					</div>
 
 
