--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
                 August 19th, 2022<br>
 								6PM-11PM<br>
 								2125 E Hennepin Ave #205,<br>
-								Minneapolis, MN 55413
+								Minneapolis, MN 55413<br>
 							</p>
-
+              <p><i>Additional Details:</i><br>
+                Dress code: Dressy casual </p>
 
 
 						</div>
@@ -126,6 +127,10 @@
 								4527 Woodlawn Point<br>
 								Eveleth, MN 55734
 							</p>
+              <p><i>Additional Details:</i><br>
+                Dress code: Casual - anything but jorts!<br>
+                The ceremony and reception will take place outdoors and will require walking on uneven ground.
+                Kids are welcome, please indicate on your RSVP if your kids will be joining us that day.
 						</div>
 					</div>
 				</div>
@@ -161,27 +166,27 @@
 							<a href="#">
 								<img alt="Hotel" src="img/small6.jpg">
 							</a>
-							<h6>Eveleth</h6>
+							<!-- <h6>Eveleth</h6>
 							<p>
 								For those traveling to Eveleth, the nearest hotel is the
                 <a href="https://www.wyndhamhotels.com/super-8/eveleth-minnesota/super-8-eveleth/overview?iata=00093763&cid=PS:4gp2262opo0j8i9&gclid=CjwKCAjw46CVBhB1EiwAgy6M4hZ663rYCh-4CRk-6qVAx29Lo7dHtlVeduBwkbBitOOn8Z0O8gywPBoCy80QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">Super 8 by Wyndham.</a>
 							</p>
 							<p>
 								1080 Industrial Park Drive, Eveleth, MN <br>
-							</p>
+							</p> -->
 						</div>
 
 						<div class="col-sm-4 feature">
 							<a href="#">
 								<img alt="Hotel" src="img/small7.jpg">
 							</a>
-							<h6></h6>
+              <h6>Eveleth</h6>
 							<p>
-
+								For those traveling to Eveleth, the nearest hotel is the
+                <a href="https://www.wyndhamhotels.com/super-8/eveleth-minnesota/super-8-eveleth/overview?iata=00093763&cid=PS:4gp2262opo0j8i9&gclid=CjwKCAjw46CVBhB1EiwAgy6M4hZ663rYCh-4CRk-6qVAx29Lo7dHtlVeduBwkbBitOOn8Z0O8gywPBoCy80QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">Super 8 by Wyndham.</a>
 							</p>
 							<p>
-
-							</p>
+								1080 Industrial Park Drive, Eveleth, MN <br>
 						</div>
 					</div>
 				</div>
