--- a/index.html
+++ b/index.html
@@ -166,27 +166,38 @@
 							<a href="#">
 								<img alt="Hotel" src="img/small6.jpg">
 							</a>
-							<!-- <h6>Eveleth</h6>
+							<h6>Eveleth</h6>
 							<p>
 								For those traveling to Eveleth, the nearest hotel is the
                 <a href="https://www.wyndhamhotels.com/super-8/eveleth-minnesota/super-8-eveleth/overview?iata=00093763&cid=PS:4gp2262opo0j8i9&gclid=CjwKCAjw46CVBhB1EiwAgy6M4hZ663rYCh-4CRk-6qVAx29Lo7dHtlVeduBwkbBitOOn8Z0O8gywPBoCy80QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">Super 8 by Wyndham.</a>
 							</p>
 							<p>
 								1080 Industrial Park Drive, Eveleth, MN <br>
-							</p> -->
+							</p>
+
+              <br>
+
+              <h6>Minneapolis</h6>
+              <p>
+                For those traveling to Minneapolis, the nearest hotel is the
+                <a href="https://www.wyndhamhotels.com/super-8/eveleth-minnesota/super-8-eveleth/overview?iata=00093763&cid=PS:4gp2262opo0j8i9&gclid=CjwKCAjw46CVBhB1EiwAgy6M4hZ663rYCh-4CRk-6qVAx29Lo7dHtlVeduBwkbBitOOn8Z0O8gywPBoCy80QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">Delta Hotels Minneapolis Northeast.</a>
+              </p>
+              <p>1330 Industrial Boulevard NE., Minneapolis, MN <br>
+              </p>
+
 						</div>
 
 						<div class="col-sm-4 feature">
 							<a href="#">
 								<img alt="Hotel" src="img/small7.jpg">
 							</a>
-              <h6>Eveleth</h6>
+							<h6></h6>
 							<p>
-								For those traveling to Eveleth, the nearest hotel is the
-                <a href="https://www.wyndhamhotels.com/super-8/eveleth-minnesota/super-8-eveleth/overview?iata=00093763&cid=PS:4gp2262opo0j8i9&gclid=CjwKCAjw46CVBhB1EiwAgy6M4hZ663rYCh-4CRk-6qVAx29Lo7dHtlVeduBwkbBitOOn8Z0O8gywPBoCy80QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener noreferrer">Super 8 by Wyndham.</a>
+
 							</p>
 							<p>
-								1080 Industrial Park Drive, Eveleth, MN <br>
+
+							</p>
 						</div>
 					</div>
 				</div>
