--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <p>The Alameda County Food Bank  - <a href="https://www.accfb.org" target="_blank" rel="noopener noreferrer">https://www.accfb.org</a></p>
               <p> Greyhound Pets of America, Minnesota Chapter - <a href="https://gpa-mn.org" target="_blank" rel="noopener noreferrer">https://gpa-mn.org</a></p>
 
-<p>We have everything we need, but are always trying to find room in our lives and storage unit for additional bicycles. Small dollar donations to the Prittinen/Halseth Bike Fund (Venmo @nprittinen) are welcome. 100% of funds will be put towards our goal of having 3x as many bikes as humans in our household.</p>
+<p>We have everything we need, but are always trying to find room in our lives and storage unit for additional bicycles. Small dollar donations to the <br> Prittinen/Halseth Bike Fund (Venmo @nprittinen) are welcome. 100% of funds will be put towards our goal of having 3x as many bikes as humans in our household.</p>
 						</div>
 					</div>
 
