--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
 
 			<a id="rsvp" class="in-page-link"></a>
 
-			<section class="rsvp rsvp-2">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12 text-center">
+      <section class="details details-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
+              <p>Please RSVP using the invitation emailed via Paperless Post.</p>
 
-					</div>
 
 
           <!--
