kids are welcome

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 								Minneapolis, MN 55413<br>
 							</p>
               <p><i>Additional Details:</i><br>
-                Dress code: Dressy casual </p>
+                Dress code: Dressy casual<br>
+              Kids are welcome, please indicate on your RSVP if your kids will be joining us that day.</p>
 
 
 						</div>
